--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .content{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background-color: rgb(181, 246, 255);
     padding: 100px;
     width: 100%;
+    font-size: x-large;
 }
 
 #display{
